[package]
name = "whisper-cli"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
failure = "0.1.6"
prettytable-rs = "0.8.0"
reqwest = { version = "0.10.1", features = ["blocking"] }
rpassword = "4.0.5"
base32 = "0.4.0"
sha3 = "0.8.2"
chrono = "0.4.10"