[package]
name = "cups-cli"
version = "0.1.0"
authors = ["Aiden McClelland <me@drbonez.dev>"]
edition = "2018"
description = "A minimal client for Cups Instant Messanger"
license = "Apache-2.0"
repository = "https://github.com/Start9Labs/cups-cli"
homepage = "https://github.com/Start9Labs/cups-cli"
readme = "README.md"
documentation = "http://docs.rs/cups-cli/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cupslib"
path = "src/lib.rs"

[[bin]]
name = "cups-cli"
path = "src/main.rs"

[features]
default = ["tui"]
tui = ["pancurses", "futures"]

[dependencies]
clap = "2.33"
failure = "0.1.6"
prettytable-rs = "0.8.0"
reqwest = { version = "0.10.1", features = ["socks"] }
rpassword = "4.0.5"
base32 = "0.4.0"
sha3 = "0.8.2"
chrono = "0.4.10"
tokio = { version = "0.2.10", features = ["full"] }
pancurses = { version = "0.16.1", optional = true }
futures = { version = "0.3.1", optional = true }
url = "2.1"
